ledger-api-assignment/deploy/hardened/istio-peer-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default-mtls
  namespace: payments
spec:
  mtls:
    mode: STRICT
