ledger-api-assignment/deploy/hardened/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payments
  labels:
    istio-injection: enabled
    pod-security.kubernetes.io/enforce: privileged
