ledger-api-assignment/deploy/hardened/istio-authz-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: default-deny-all
  namespace: payments
spec:
  {} # Default deny all traffic in this namespace
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-reporting-to-ledger
  namespace: payments
spec:
  selector:
    matchLabels:
      app: ledger-api
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/payments/sa/reporting-sa"]
    to:
    - operation:
        methods: ["GET", "POST"]
