ledger-api-assignment/deploy/hardened/kyverno-policies.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-non-root
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: check-runasnonroot
      match:
        resources:
          kinds:
            - Pod
      exclude:
        resources:
          namespaces:
            - argocd
            - kube-system
            - istio-system
      validate:
        message: "Running as root is not allowed. Set runAsNonRoot to true."
        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
            =(containers):
              - =(securityContext):
                  =(runAsNonRoot): true
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: require-image-tag
      match:
        resources:
          kinds:
            - Pod
      exclude:
        resources:
          namespaces:
            - argocd
            - kube-system
            - istio-system
      validate:
        message: "Using image tag ':latest' is not allowed."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
